[project]
name = "vrchatapi-extensions"
version = "0.1.0"
description = "VRChatAPIライブラリのラッパー"
requires-python = ">=3.12"
dependencies = [
    "vrchatapi>=1.20.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "twine>=6.2.0",
    "pylint>=4.0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["vrchatapi_extensions", "vrchatapi_extensions.*"]
