[tool.uv]
default-groups = []

[project]
name = "vrchatapi-extensions"
version = "0.1.0"
description = "VRChatAPIライブラリのラッパー"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.4",
    "keyring>=25.7.0",
    "tenacity>=9.1.2",
    "vrchatapi>=1.20.7",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "twine>=6.2.0",
]
